--- a/djangonautic/articles/templates/articles/article_list.html
+++ b/djangonautic/articles/templates/articles/article_list.html
@@ -1,18 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Articles</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
-    <h1>Article List</h1>
+    <h1> Article List </h1>
     <div class = "articles">
         {% for article in articles %}
             <div class="article">
-                <h2><a href='#'>{{article.title}} </a></h2>
-                <p>{{article.body}}</p>
-                <p>{{article.date}}</p>
+                <h2><a href='#'>{{ article.title }} </a></h2>
+                <p>{{ article.snippet }}</p>
+                <p>{{ article.date }}</p>
             </div>
         {% endfor %}
     </div>
