--- a/djangonautic/assets/styles.css
+++ b/djangonautic/assets/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntus&display=swap');
+
 body{
     background-color: #0f121f;
     background-image: url(/static/stars.png);
