added sign in/login user authentication

--- a/djangonautic/templates/about.html
+++ b/djangonautic/templates/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>About us</h1>
-    <p>We like Django.</p>
+    <p>This Blog talks about my Journey in learning Django and Django database to create this Django web blog app, Djangonautic.</p>
 </body>
 </html>
