--- a/djangonautic/articles/templates/articles/article_create.html
+++ b/djangonautic/articles/templates/articles/article_create.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="create-article">
     <h2>Create New Article</h2>
-    <form action="{% 'articles:create' %}" class="site-form" method="post" enctype="multipart/form-data">
+    <form action="{% url 'articles:create' %}" class="site-form" method="post" enctype="multipart/form-data">
         {{ form }}
         <input type="submit" value="Create">
     </form>
