--- a/djangonautic/assets/styles.css
+++ b/djangonautic/assets/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntus&display=swap');
-
 body{
     background-color: #0f121f;
     background-image: url(/static/stars.png);
@@ -19,4 +17,55 @@ h1, h2, h3, h4, h5{
 a, a:hover, a:visited{
     color: #fff;
     text-decoration: none;
+}
+
+.wrapper{
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+div.wrapper h1{
+    text-align: center;
+    margin: 100px auto;
+    font-size: 2.4em;
+}
+
+header{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px 0;
+}
+
+nav{
+    justify-self: end;
+}
+
+nav li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+nav button{
+    background: none;
+    color: #fff;
+    cursor: pointer;
+    border: 0;
+    font-size: 1em;
+}
+
+.articles{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.article{
+    padding: 10px;
+    border: 1px solid #00dba0;
+    position: relative;
+    padding-bottom: 40px;
+}
+
+.article h2{
+    font-size: 1.2em;
 }
