--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
     <body>
-        <div class="wrapper">
+        <header class="wrapper">
             <h1><a href= "{% url 'articles:list' %}"><img src="{% static 'logo.png' %}"/></a></h1>
             <nav>
                 <ul>
@@ -28,6 +28,8 @@
                     {% endif %}
                 </ul>
             </nav>
+        </header>
+        <div class="wrapper">
             {% block content %}
             {% endblock %}
         </div>
