--- a/djangonautic/articles/templates/articles/article_create.html
+++ b/djangonautic/articles/templates/articles/article_create.html
@@ -4,6 +4,7 @@
 <div class="create-article">
     <h2>Create New Article</h2>
     <form action="{% url 'articles:create' %}" class="site-form" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         {{ form }}
         <input type="submit" value="Create">
     </form>
